Resolve compiler warning.